# hello-rust

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: config.rs  main.rs
