[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "env"] }
dotenv = "0.15.0"
log = "0.4"
tracing-subscriber = { version = "0.3.16", features = ["json"] }

[dev-dependencies]
